<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.capstone.project.skindetector.ui.fragment.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="id.capstone.project.skindetector.ui.fragment.main.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="id.capstone.project.skindetector.ui.fragment.main.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_navigation_camera_to_navigation_result"
            app:destination="@id/navigation_result"
            app:popUpTo="@id/navigation_camera"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_premium"
        android:name="id.capstone.project.skindetector.ui.fragment.main.premium.PremiumFragment"
        android:label="@string/title_premium"
        tools:layout="@layout/fragment_premium" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.capstone.project.skindetector.ui.fragment.main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="id.capstone.project.skindetector.ui.fragment.other.detectionresult.DetectionResultFragment"
        android:label="@string/fragment_detection_result"
        tools:layout="@layout/fragment_detection_result">
        <argument
            android:name="isFromCamera"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument
            android:name="uriImage"
            app:argType="android.net.Uri" />
        <action
            android:id="@+id/action_navigation_result_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>
</navigation>