<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.main.premium.PremiumFragment">

    <TextView
        android:id="@+id/tv_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_24"
        android:text="@string/premium_member"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/raleway_extrabold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <RelativeLayout
        android:id="@+id/container_premium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_margin="16dp"
        android:layout_marginStart="@dimen/size_16"
        app:layout_constraintTop_toBottomOf="@id/tv_premium"
        android:background="@drawable/ic_background_welcome">

        <ImageView
            android:id="@+id/iv_animdoc"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_anim_doct"
            />

        <TextView
            android:id="@+id/tv_desc_premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_animdoc"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/premium_desc"
            android:textAlignment="center"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_premium"
        android:text="@string/premium_valid"
        />

</androidx.constraintlayout.widget.ConstraintLayout>