<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.welcoming.welcome.WelcomeFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/size_16"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/anim_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8"
        android:layout_marginTop="@dimen/size_16"
        android:background="@drawable/ic_background_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/doctor_lottie"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/size_48"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/doctor" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_lottie"
            android:layout_marginStart="@dimen/size_24"
            android:layout_marginEnd="@dimen/size_24"
            android:gravity="center"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/desc_welcome"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anim_container" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange_200"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@id/btn_create_account"
        app:layout_constraintStart_toStartOf="@id/btn_create_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_create_account" />

</androidx.constraintlayout.widget.ConstraintLayout>